syntax = "proto3";

option csharp_namespace = "LoginGrpcService";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc CheckLogin (HelloRequest) returns (HelloReply);
}

// The request message containing the user's name.
message HelloRequest {
  string acount = 1; //順序第一位
  string pavvd = 2;
}

// The response message containing the greetings.
message HelloReply {
  string endmsg = 1;
  string accessToken = 2;
  string refreshToken = 3;
}